borsh-derive-internal/src/attribute_helpers/snapshots/borsh_derive_internal__attribute_helpers__field__tests__schema_params_parsing2.snap
---
source: borsh-derive-internal/src/attribute_helpers/field.rs
expression: debug_print_bounds(schema_params)
---
T => < T as TraitName > :: Associated
V => Vec < V >

