borsh-derive-internal/src/attribute_helpers/snapshots/borsh_derive_internal__attribute_helpers__field__tests__schema_with_funcs_parsing.snap
---
source: borsh-derive-internal/src/attribute_helpers/field.rs
expression: debug_print_tokenizable(with_funcs.declaration)
---
third_party_impl :: declaration :: < K , V >

