borsh-derive-internal/src/attribute_helpers/snapshots/borsh_derive_internal__attribute_helpers__field__tests__schema_with_funcs_parsing_error.snap
---
source: borsh-derive-internal/src/attribute_helpers/field.rs
expression: err
---
Error(
    "both `declaration = ...` and `definitions = ...` have to be specified at the same time",
)
