borsh-derive-internal/src/attribute_helpers/snapshots/borsh_derive_internal__attribute_helpers__field__tests__ser_de_with_parsing1.snap
---
source: borsh-derive-internal/src/attribute_helpers/field.rs
expression: debug_print_tokenizable(attrs.serialize_with)
---
third_party_impl :: serialize_third_party

